--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
         <label>
           <span>Categoria</span>
-          <input id="lan-categoria" list="categorias-receita" type="text" placeholder="Ex: Serviço / Combustível / Assinatura" />
+          <select id="lan-categoria"></select>
         </label>
 
         <datalist id="categorias-receita">
